--- a/drivers/jointspace/pair/start.html
+++ b/drivers/jointspace/pair/start.html
@@ -3,12 +3,10 @@
 Homey.setTitle( __('pair.start.title') );
 
 Homey.on('error', function( errortype, callback ){
-
 	if (errortype == 'error') {
 		Homey.alert(__('pair.start.error'), 'error');
 		Homey.done();
-	}
-
+	};
 	if (errortype == 'nosettings') {
 		Homey.alert(__('pair.start.nosettings'), 'error');
 		Homey.done();
@@ -16,23 +14,26 @@ Homey.on('error', function( errortype, callback ){
 })
 
 Homey.on('continue', function( success, callback ){
-
-		Homey.showView('list_devices');
-
+		Homey.showView('list_tvs');
 })
 
 function saveSettings () {
 
 	// variables
 	var inputIPAddress = document.getElementById( 'ipAddress' ).value;
+	var inputDeviceNr = document.getElementById( 'deviceNr' ).value;
+	var inputDeviceName = document.getElementById( 'deviceName').value;
 
 	// If required values are filled in
-	// check if this is a real IPv4 address
+	// FIXME: should check if this is a real IPv4 address
+
 	if (inputIPAddress != '') {
 
 		// Build data array
 		var data = {
-			ipaddress: inputIPAddress
+			ipaddress: inputIPAddress,
+			devicenr: inputDeviceNr,
+			devicename: inputDeviceName
 		};
 
 		// Continue to back-end, pass along data
@@ -42,6 +43,7 @@ function saveSettings () {
 
 		// Give error, required values
 		Homey.alert(__('pair.start.required'), 'error');
+		// Homey.done() closes the pairing window
 		Homey.done();
 
 	}
@@ -50,7 +52,7 @@ function saveSettings () {
 
 </script>
 
-    <p data-i18n="pair.start.intro">enter IP address</p>
+    <p data-i18n="pair.start.intro">enter IP address and name</p>
 
 		<style>
 			.pairSettings {
@@ -68,7 +70,14 @@ function saveSettings () {
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.ipAddress">IP</td>
 				<td><input id="ipAddress" type="text" value="192.168.1.10" placeholder=""/></td>
-				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td style="width:100px;" data-i18n="pair.start.deviceNr">Nr</td>
+				<td><input id="deviceNr" type="text" value="1" placeholder=""/></td>
+			</tr>
+			<tr>
+				<td style="width:100px;" data-i18n="pair.start.deviceName">Name</td>
+				<td><input id="deviceName" type="text" value="Philips TV" placeholder=""/></td>
 			</tr>
 		</table>
 
